# wasm-tools

./: .taplo.toml  Cargo.toml  README.md  browser.js  index.d.ts  index.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  walrus.wasi-browser.js  walrus.wasi.cjs  wasm-tools.browser.js  wasm-tools.d.ts  wasm-tools.js
.github/workflows/: CI.yml  website-ci.yml  website-deploy.yml  website.yml
__test__/: customs.spec.ts  data.spec.ts  elements.spec.ts  exports.spec.ts  fieldless-ops.json  functions.spec.ts  globals-types.spec.ts  globals-write.spec.ts  globals.spec.ts  imports.spec.ts  index.spec.ts  ir.spec.ts  locals.spec.ts  memories.spec.ts  module.spec.ts  producers.spec.ts  tables.spec.ts  tags.spec.ts  types-recgroup.spec.ts  types.spec.ts  valtype-consts.spec.ts
__test__/fixtures/: data-rooted.wasm  data-rooted.wat  data.wasm  data.wat  elements-rooted.wasm  elements-rooted.wat  elements.wasm  elements.wat  extended-const.wasm  extended-const.wat  functions-shared-entry.wasm  functions-shared-entry.wat  functions.wasm  functions.wat  global-types.wasm  global-types.wat  globals.wasm  (+21 more)
patches/: @emnapi__core@1.9.2.patch
scripts/: write-browser-entry.mjs
src/: config.rs  constexpr.rs  convert.rs  customs.rs  data.rs  elements.rs  exports.rs  functions.rs  globals.rs  handle.rs  imports.rs  ir.rs  ir_marshal.rs  lib.rs  locals.rs  memories.rs  module.rs  producers.rs  safevec.rs  tables.rs  tags.rs  types.rs  valtype.rs
website/: .gitignore  DESIGN.md  app.css  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  void.json
(+65 files in other folders)
