[workspace]
members = ["crates/panic"]

  [workspace.dependencies]
  napi           = { version = "3.0.0-alpha", features = ["anyhow"] }
  napi-build     = "2"
  napi-derive    = "3.0.0-alpha"
  rustc-demangle = "0.1"
  uuid           = { version = "1", default-features = false, features = ["v4"] }
  walrus         = "0.22"

[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name    = "napi-wasmtools"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi           = { workspace = true }
napi-derive    = { workspace = true }
rustc-demangle = { workspace = true }
uuid           = { workspace = true }
walrus         = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }

[profile.release]
codegen-units = 1
lto           = true

[profile.wasm-fixture]
inherits        = "release"
opt-level       = 'z'
overflow-checks = false
panic           = 'abort'
strip           = false
